add: hero section done

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -9,7 +9,7 @@
     }
     /* Body style */
     body {
-        @apply font-primary text-base md:text-2xl bg-light text-dark dark:bg-dark dark:text-light transition-all duration-300;
+        @apply font-primary text-lg md:text-2xl bg-light text-dark dark:bg-dark dark:text-light transition-all duration-300;
     }
 
     /* Colors */
@@ -322,31 +322,24 @@
     }
 
     /* Typography */
-
     @font-face {
-        font-family: Amiri;
-        src: url(/fonts/amiri/Amiri-Regular.ttf) format('truetype');
+        font-family: Cairo;
+        src: url(/cairo/Cairo-Regular.ttf) format('truetype');
         font-weight: normal;
         font-style: normal;
     }
 
     @font-face {
-        font-family: Amiri;
-        src: url(/fonts/amiri/Amiri-Bold.ttf) format('truetype');
-        font-weight: bold;
+        font-family: Cairo;
+        src: url(/cairo/Cairo-Light.ttf) format('truetype');
+        font-weight: lighter;
         font-style: normal;
     }
 
     @font-face {
-        font-family: Amiri;
-        src: url(/fonts/amiri/Amiri-BoldItalic.ttf) format('truetype');
+        font-family: Cairo;
+        src: url(/cairo/Cairo-Bold.ttf) format('truetype');
         font-weight: bold;
-        font-style: italic;
-    }
-    @font-face {
-        font-family: Amiri;
-        src: url(/fonts/amiri/Amiri-Italic.ttf) format('truetype');
-        font-weight: normal;
-        font-style: italic;
+        font-style: normal;
     }
 }
