add: more services

--- a/css/main.css
+++ b/css/main.css
@@ -1131,6 +1131,7 @@ button.submitbuton {
 .social-link-img {
   padding: 0.4em;
   margin: 0 1.4em;
+  margin-bottom: 0.7em;
   font-size: 0.4rem;
   color: white;
   border: 1px solid white;
